# Simpleton-Engine

./: .travis.yml  CMakeLists.txt  README.md  conanfile.py
Pack/: CMakeLists.txt  pack rects.cpp  pack rects.hpp  search dir.cpp  search dir.hpp  sort by frame.cpp
Simpleton/Memory/: alloc.hpp  view.hpp
Simpleton/Type List/: reduce.hpp
conan/ci/: install.sh
conan/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
